syntax = "proto3";
package Game.Shared;

option csharp_namespace = "Game.Shared.Proto";

import "google/protobuf/timestamp.proto";

enum EProtoType {
  None = 0;
  //ProtoType_C2SLoginReq = 1001;
  //ProtoType_S2CLoginRsp = 1002;
  Proto_C2SPing = 1003;
  Proto_S2CPong = 1004;
  Proto_C2SChat = 2001;

  PingPong_Req = 3001;
  PingPong_Rsp = 3002;
  PlayerConnect_Rsp = 3003;
  PlayerIdentify_Req = 3004;
  PlayerIdentify_Rsp = 3005;
  ClientWillDisconnect_Rsp = 3006;
  Join_Ntf = 3007;
  BattleStart_Req = 3008;
  BattleStart_Ntf = 3009;
  BattleStop_Req = 3010;
  BattleStop_Ntf = 3011;
  BattlePause_Req = 3012;
  BattleResume_Req = 3013;
  BattlePause_Rsp = 3014;
  Command_Req = 3015;
  Command_Ntf = 3016;
  CommandAll_Rsp = 3017;
}

// 通用协议头（必须放在所有消息最前面）
message MsgHeader {
  int32 MsgId = 1;        // 唯一消息ID（如1001=LoginReq，1002=LoginRsp，2001=Chat）
  int32 Channel = 2;      // 通道（1=TCP，2=KCP）
  int64 PlayerId = 3;     // 玩家ID（可选）
}

message C2SPing
{
  google.protobuf.Timestamp timeStamp = 1; // 时间戳
}

message S2CPong
{
  google.protobuf.Timestamp timeStamp = 1; // 时间戳
}

message C2SChat
{
  string from = 1;
  string text = 2;
}



// 帧同步协议


message Msg_PingPong_Req {
}

message Msg_PingPong_Rsp {
}

message Msg_PlayerConnect_Rsp {
}

// 客户端申请 ID 校验
message Msg_PlayerIdentify_Req {
    string playerName = 1; // 申请登录的playerName TODO: 后续改为uuid之类的
}


// ID 校验结果
enum EIdentifyResult {
    Succeed = 0;
    Failed = 1;
    Replace = 2;    // 验证通过，有之前登录过的账号，把它顶掉了
}

// 加入房间回包，给加入的人，告诉他自己的playerId是多少
message Msg_PlayerIdentify_Rsp {
    EIdentifyResult result = 1;
    uint32 playerId = 2;
}

// 告诉客户端即将断开连接
message Msg_ClientWillDisconnect_Rsp{
}

// 有玩家加入时，广播给所有人，告诉他们当前房间内有哪些人
message Msg_Join_Ntf{
    repeated uint32 playerIds = 1;
}

// 战斗开始, 请求
message Msg_BattleStart_Req {
}

// 战斗开始, 回包
message Msg_BattleStart_Ntf {
    int32 randomSeed = 1;
}

// 战斗结束, 请求
message Msg_BattleStop_Req {
}

// 战斗结束, 回包
message Msg_BattleStop_Ntf {
}

// 战斗服务器暂停, 请求
message Msg_BattlePause_Req {
}

// 战斗服务器恢复, 请求
message Msg_BattleResume_Req {
}

// 同步战斗暂停状态
message Msg_BattlePause_Rsp {
    bool isPause = 1; // 当前状态是否是暂停
}

enum ECommand {
    Modify = 0;
}

// 局内指令请求
message Msg_Command_Req {
    ECommand eCommand = 1;
}

// 单条指令
message CommandDetail {
    uint32 playerId = 1;
    ECommand eCommand = 2;
}

// 单帧的指令集合
message OneFrameCommands {
    uint64 serverTick = 1;   // 帧号
    repeated CommandDetail details = 2;     // 这帧里的指令集合
}

// 多帧指令集合下发（正常同步）
message Msg_Command_Ntf{
    uint64 curBattleServerTick = 1;
    repeated OneFrameCommands commandsSet = 2;  // 拥有多帧的指令集合
}

// 多帧指令集合下发（全量同步，用于断线重连）
message Msg_CommandAll_Rsp {
    uint64 syncedBattleServerTick = 1;   // 同步包的最大帧，非服务器最大帧
    repeated OneFrameCommands commandsSet = 2;  // 拥有多帧的指令集合
}

////
//message xxx{
//}